--- a/project-3/index.html
+++ b/project-3/index.html
@@ -20,7 +20,7 @@
 
       <h2>Introduction</h2>
       <div class="paragraph-1">
-        <p>I stumbled across this book one day walking through a bookstore in Missoula,
+        <p align"center">I stumbled across this book one day walking through a bookstore in Missoula,
           something that I rarely do. Something even more rarer happened, I bought the book.
           The book is <em id="heading-3">Smokejumper</em> by Jason A. Ramos and Julian Smith.
           It is a memoir about how Jason became to be the man, firefighter, husband, and many more traits that he is today. He writes about all of his hardships and good-times of becoming a smokejumper. For those who don't know what a smokejumper is, they are highly trained firefighters who jump out of planes in some of the most remote places in the country to fight and put out wildfires. They are highly trained profestionals and are well respected in the fire community. Being a wildland firefighter, this book touched a lot of nerves in a sad way and in good ways as well. People who aren't wildland firefighters or don't know anyone who is don't really know what we do or what we go through day by day on the fireline. This book is a great read for firefighters and non-firefighters alike.</p>
