--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -11,3 +11,40 @@
   <!--Title-->
   <title>Smokejumper</title>
 </head>
+
+<h1><strong>Contact the Author</strong></h1></header>
+<div class="content">
+  <main>
+
+    <h2>Contact Jason</h2>
+    <div class="paragraph-1">
+      <p>Thank you for reading Jason's book. If you have any questions about
+        his adventures or his book, enter your comment in the comment box and
+        provide your email address.</p>
+
+      </div>
+    </main>
+
+
+<form action="https://www.example.com"method="post" id="example-form" class="form-class">
+  <p>Comments?</p>
+  <textarea name="comments" cols="4" rows="4" style="min-width:100%">
+  </textarea>
+
+  <h8>Email Address</h8>
+  <p>
+     Email:
+     <input type="text" name="email" placeholder="johnnyapplesead@gmail.com" autofocus/>
+   </p>
+ </form>
+
+ <footer>
+
+   <ul id="nav-list">
+     <li><a href="../index.html"> Home</a></li>
+     <li><a href="pages/contact.html"> Contact</a></li>
+     <li><a href="../pages/about.html"> About</a></li>
+   </ul>
+   </footer>
+ </body>
+ </html>
