--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -26,12 +26,12 @@
   <header> <h1><strong>Exerpt from Jason's book</h1></strong>
     <div class="content">
       <main>
-        <p>"There's the satisfaction of facing huge physical and mental challenges.
+        <p align"center">"There's the satisfaction of facing huge physical and mental challenges.
           The undeniable excitement of danger. The camaraderie, and the love/hate
           relationship that comes from depending on others for your life and vice
-          versa."-Jason A. Ramos pg 212
+          versa."-Jason A. Ramos pg 212</p>
 
-          "This job is notorious for the strain it puts on relationships. Dating a
+        <p align"center">This job is notorious for the strain it puts on relationships. Dating a
           firefighter or smokejumper sounds exciting, and in the short term often is.
           But the appeal of your partner being called away constantly to do dangerous
           work at a moments notice, to who knows where and for who knows how long,
