--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -39,7 +39,7 @@
 
         </main>
 
-        <img src="./images/wildfire.jpg">
+        <img src="../images/wildfire.jpg" alt="Photo of deer in wildfire">
         <!--Image source:https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Deerfire_high_res_edit.jpg/1200px-Deerfire_high_res_edit.jpg-->
 
 
