--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -41,7 +41,7 @@
 
         <p align"center">
 
-        <img src="../images/wildfire.jpg" alt="Photo of deer in wildfire" title="Wildfire" width="600" height="600">
+        <img src="../images/wildfire.jpg" alt="Photo of deer in wildfire" title="Wildfire">
         <!--Image source:https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Deerfire_high_res_edit.jpg/1200px-Deerfire_high_res_edit.jpg-->
 
       </p>
