--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -17,7 +17,7 @@
   <header> <h1><strong>About Jason</h1></strong>
     <div class="content">
       <main>
-        <p align"center">Jason is part of an elite group of firefighters: <em id="w1" id="heading-3">Smokejumpers</em>.
+        <p align"center">Jason is part of an elite group of firefighters: <em id="w1" id="heading-3" class="color-text">Smokejumpers</em>.
           Smokejumpers are highly trained firefighters that parachute into remote areas to extinguish wildfires.
           He has over twenty-seven years of firefighting experience. He started his
           career with the Riverside County Fire Department in California. He then worked
