--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -39,12 +39,12 @@
 
         </main>
 
-        <p align"center">
+        <center>
 
         <img src="../images/wildfire.jpg" alt="Photo of deer in wildfire" title="Wildfire">
         <!--Image source:https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Deerfire_high_res_edit.jpg/1200px-Deerfire_high_res_edit.jpg-->
 
-      </p>
+      </center>
         <footer>
 
           <ul id="nav-list">
