--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -31,7 +31,7 @@
           relationship that comes from depending on others for your life and vice
           versa."-Jason A. Ramos pg 212</p>
 
-        <p align"center">This job is notorious for the strain it puts on relationships. Dating a
+        <p align"center">"This job is notorious for the strain it puts on relationships. Dating a
           firefighter or smokejumper sounds exciting, and in the short term often is.
           But the appeal of your partner being called away constantly to do dangerous
           work at a moments notice, to who knows where and for who knows how long,
