fonts and pseudo class

--- a/project-3/index.html
+++ b/project-3/index.html
@@ -7,6 +7,7 @@
   <meta name="desription" content="Introduction">
   <!--Link of styles-->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/fonts.css">
 
   <!--Title of page-->
   <title>Smokejumper</title>
