--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -7,6 +7,7 @@
   <meta name="desription" content="Contact">
   <!--Link of styles and fonts -->
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/fonts.css">
 
   <!--Title-->
   <title>Smokejumper</title>
@@ -18,9 +19,9 @@
 
     <h2>Contact Jason</h2>
     <div class="paragraph-1">
-      <p>Thank you for reading Jason's book. If you have any questions about
+      <p>Thank you for being interested in this book. I can assure it is a great read. If you have any questions about
         his adventures or his book, enter your comment in the comment box and
-        provide your email address.</p>
+        provide your email address. <div class="element-1"><a href="https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639">Order the book here.</a></div></p>
 
       </div>
     </main>
