--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -7,6 +7,7 @@
   <meta name="desription" content="about author">
   <!--Link of styles-->
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/fonts.css">
 
   <!--Title of page-->
   <title>Jason A. Ramos</title>
