--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -7,6 +7,7 @@
   <meta name="desription" content="Sample">
   <!--Link of styles and fonts -->
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/fonts.css">
 
   <!--Title-->
   <title>Smokejumper</title>
