--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -32,11 +32,11 @@
 
         <footer>
 
-          <ul id="nav-list">
-            <li><a href="../index.html"> Home</a></li>
-            <li><a href="../pages/contact.html"> Contact</a></li>
-            <li><a href="../pages/sample.html"> Sample</a></li>
-          </ul>
+
+            <div class="menu-item"><a href="../index.html"> Home</a></div>
+            <div class="menu-item"><a href="../pages/contact.html"> Contact</a></div>
+            <div class="menu-item"><a href="../pages/sample.html"> Sample</a></div>
+          
           </footer>
         </body>
         </html>
