--- a/project-3/index.html
+++ b/project-3/index.html
@@ -36,11 +36,11 @@
 
       <footer>
 
-        <ul id="nav-list">
-          <li><a href="pages/about.html"> About</a></li>
-          <li><a href="pages/contact.html"> Contact</a></li>
-          <li><a href="pages/sample.html"> Sample</a></li>
-        </ul>
+
+          <div class="menu-item"><a href="pages/about.html"> About</a></div>
+          <div class="menu-item"><a href="pages/contact.html"> Contact</a></div>
+          <div class="menu-item"><a href="pages/sample.html"> Sample</a></div>
+        
         </footer>
       </body>
       </html>
