--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -41,11 +41,11 @@
 
  <footer>
 
-   <ul id="nav-list">
-     <li><a href="../index.html"> Home</a></li>
-     <li><a href="../pages/sample.html"> Sample</a></li>
-     <li><a href="../pages/about.html"> About</a></li>
-   </ul>
+
+     <div class="menu-item"><a href="../index.html"> Home</a></div>
+     <div class="menu-item"><a href="../pages/sample.html"> Sample</a></div>
+     <div class="menu-item"><a href="../pages/about.html"> About</a></div>
+   
    </footer>
  </body>
  </html>
