--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -48,11 +48,11 @@
       </center>
         <footer>
 
-          <ul id="nav-list">
-            <li><a href="../index.html"> Home</a></li>
-            <li><a href="../pages/contact.html"> Contact</a></li>
-            <li><a href="../pages/about.html"> About</a></li>
-          </ul>
+
+            <div class="menu-item"><a href="../index.html"> Home</a></div>
+            <div class="menu-item"><a href="../pages/contact.html"> Contact</a></div>
+            <div class="menu-item"><a href="../pages/about.html"> About</a></div>
+        
           </footer>
         </body>
         </html>
