--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -15,15 +15,20 @@
 
 
 <body>
-  <header> <h1><strong>About Jason</h1></strong>
+  <header> <h1><strong>Jason A. Ramos</h1></strong>
     <div class="content">
       <main>
+
+        <h2>About Jason</h2>
+        <div class="paragraph-1">
         <p align"center">Jason is part of an elite group of firefighters: <em id="w1" id="heading-3" class="color-text">Smokejumpers</em>.
           Smokejumpers are highly trained firefighters that parachute into remote areas to extinguish wildfires.
           He has over twenty-seven years of firefighting experience. He started his
           career with the Riverside County Fire Department in California. He then worked
           his way up to become a smokejumper. The book tells his story and how he overcame
           obstacles and accomplished a great feat.</p>
+        </div>
+      
         </main>
         <center>
           <p><img src="../images/jason.jpg" alt="Photo of Jason and his book"></p>
@@ -36,7 +41,7 @@
             <div class="menu-item"><a href="../index.html"> Home</a></div>
             <div class="menu-item"><a href="../pages/contact.html"> Contact</a></div>
             <div class="menu-item"><a href="../pages/sample.html"> Sample</a></div>
-          
+
           </footer>
         </body>
         </html>
