--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -24,19 +24,25 @@
 
 
 <body>
-  <header> <h1><strong>Exerpt from Jason's book</h1></strong>
+  <header> <h1><strong>Sample</h1></strong>
     <div class="content">
       <main>
+        <h2>Exerpt from the book</h2>
+
+        <div class="paragraph-1">
         <p align"center">"There's the satisfaction of facing huge physical and mental challenges.
           The undeniable excitement of danger. The camaraderie, and the love/hate
           relationship that comes from depending on others for your life and vice
           versa."-Jason A. Ramos pg 212</p>
+        </div>
 
+        <div class="paragraph-2">
         <p align"center">"This job is notorious for the strain it puts on relationships. Dating a
           firefighter or smokejumper sounds exciting, and in the short term often is.
           But the appeal of your partner being called away constantly to do dangerous
           work at a moments notice, to who knows where and for who knows how long,
           quickly wears thin."-Jason A. Ramos pg 211</p>
+        </div>
 
         </main>
 
@@ -52,7 +58,7 @@
             <div class="menu-item"><a href="../index.html"> Home</a></div>
             <div class="menu-item"><a href="../pages/contact.html"> Contact</a></div>
             <div class="menu-item"><a href="../pages/about.html"> About</a></div>
-        
+
           </footer>
         </body>
         </html>
