--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -17,13 +17,15 @@
 <div class="content">
   <main>
 
+
+    <div class="parent-container">
     <h2>Contact Jason</h2>
     <div class="paragraph-1">
       <p>Thank you for being interested in this book. I can assure it is a great read. If you have any questions about
         his adventures or his book, enter your comment in the comment box and
         provide your email address. <div class="element-1"><a href="https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639">Order the book here.</a></div></p>
 
-      </div>
+      </div></div>
     </main>
 
 
@@ -45,7 +47,7 @@
      <div class="menu-item"><a href="../index.html"> Home</a></div>
      <div class="menu-item"><a href="../pages/sample.html"> Sample</a></div>
      <div class="menu-item"><a href="../pages/about.html"> About</a></div>
-   
+
    </footer>
  </body>
  </html>
