--- a/project-3/pages/about.html
+++ b/project-3/pages/about.html
@@ -19,6 +19,8 @@
     <div class="content">
       <main>
 
+
+        <div class="parent-container">
         <h2>About Jason</h2>
         <div class="paragraph-1">
         <p align"center">Jason is part of an elite group of firefighters: <em id="w1" id="heading-3" class="color-text">Smokejumpers</em>.
@@ -27,8 +29,8 @@
           career with the Riverside County Fire Department in California. He then worked
           his way up to become a smokejumper. The book tells his story and how he overcame
           obstacles and accomplished a great feat.</p>
-        </div>
-      
+        </div></div>
+
         </main>
         <center>
           <p><img src="../images/jason.jpg" alt="Photo of Jason and his book"></p>
