--- a/project-3/pages/sample.html
+++ b/project-3/pages/sample.html
@@ -29,7 +29,7 @@
       <main>
 
 
-        <div class="parent-container">
+
         <h2>Exerpt from the book</h2>
 
         <div class="paragraph-1">
@@ -37,7 +37,7 @@
           The undeniable excitement of danger. The camaraderie, and the love/hate
           relationship that comes from depending on others for your life and vice
           versa."-Jason A. Ramos pg 212</p>
-        </div></div>
+        </div>
 
         <div class="paragraph-2">
         <p align"center">"This job is notorious for the strain it puts on relationships. Dating a
