--- a/project-3/pages/contact.html
+++ b/project-3/pages/contact.html
@@ -18,14 +18,14 @@
   <main>
 
 
-    <div class="parent-container">
+
     <h2>Contact Jason</h2>
     <div class="paragraph-1">
       <p>Thank you for being interested in this book. I can assure it is a great read. If you have any questions about
         his adventures or his book, enter your comment in the comment box and
         provide your email address. <div class="element-1"><a href="https://www.amazon.com/Smokejumper-Memoir-Americas-Airborne-Firefighters/dp/0062319639">Order the book here.</a></div></p>
 
-      </div></div>
+      </div>
     </main>
 
 
