--- a/project-4/index.html
+++ b/project-4/index.html
@@ -46,4 +46,16 @@
 
         <div class="flex-item process">
           <h1>Process</h1>
-          <p>
+          <p>The process for creating a website with a Responsive Web Desgin approach
+            is quite simple. If you already know some basics on web desgin, it should
+            come quickly to you. Within your  Style CSS file, each 'box', should be designated
+            in a specific order. You must then order each 'box' in order to align each
+            'box' within a specific order. Then, in the Style sheet, designatethe media
+            screen minimum pixels and the order the 'boxes' will show up on smaller screens.
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </body>
+  </html>
