--- a/project-4/index.html
+++ b/project-4/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="css/fonts.css">
   <!--Title of Page-->
   <title>Responsive Web Design</title>
+<style>
+div main-container {background-image: image(../images/paintswirl.jpg);}
+</style>
+
 </head>
 
 
