--- a/project-4/index.html
+++ b/project-4/index.html
@@ -54,6 +54,12 @@
             in a specific order. You must then order each 'box' in order to align each
             'box' within a specific order. Then, in the Style sheet, designatethe media
             screen minimum pixels and the order the 'boxes' will show up on smaller screens.
+            Flexbox is suitable for Responsive Web Design because it allows the text to grow
+            or shrink depending on the space available on the webpage. Wireframes play a
+            role in Responsive Web Design because it allows web developers to make a template
+            and see exactly how their website will look once there is content on the page.
+
+
           </p>
 
         </div>
