--- a/project-4/index.html
+++ b/project-4/index.html
@@ -25,7 +25,7 @@
 
 
     <div class="flex-item whatis">
-      <h1>What is Responsive Web Desgin?</h1>
+      <h1>What is Responsive Web Design?</h1>
 
       <p>Responsive Web Design is a way of desgining websites to be supported
         on different devices as well as different browser types. Responsive
